# ai-code-trust-validator

./: .all-contributorsrc  README.md  RELEASE_NOTES.md  action.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: good-first-issue.yml  question.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  stale.yml
ai_trust_validator/: __init__.py  ai_fix.py  analytics.py  api_server.py  benchmark.py  cache.py  cli.py  config.py  fixer.py  lsp_server.py  models.py  multi_file.py  multi_lang_validator.py  plugin.py  test_generator.py  validator.py  watcher.py
ai_trust_validator/analyzers/: __init__.py  best_practices.py  hallucination.py  js_hallucination.py  js_security.py  logic.py  security.py
ai_trust_validator/languages/: __init__.py  base.py  javascript_parser.py  python_parser.py  typescript_parser.py
ai_trust_validator/reporters/: __init__.py  html_reporter.py  json_reporter.py  sarif_reporter.py
ai_trust_validator/schemas/: config.schema.json
docs/: community-posts.md  index.html  robots.txt  sitemap.xml  social-media-templates.md
docs/images/: README.md
jetbrains-plugin/: build.gradle.kts
tests/: test_best_practices.py  test_config.py  test_hallucination.py  test_logic.py  test_security.py  test_validator.py
vscode-extension/: package.json
