[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trust-validator"
version = "0.4.0"
description = "Validate AI-generated code for security vulnerabilities, hallucinations, and logic errors"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Rudra Sarker", email = "rudra496@users.noreply.github.com"}
]
maintainers = [
    {name = "Rudra Sarker", email = "rudra496@users.noreply.github.com"}
]
keywords = [
    "ai", "code-quality", "security", "validation", "llm", "chatgpt", 
    "copilot", "claude", "gpt", "static-analysis", "developer-tools",
    "machine-learning", "code-review", "testing", "hallucination",
    "trust", "verification", "ast", "linter", "vscode", "lsp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Typing :: Typed",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "astroid>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML",
]
server = [
    "uvicorn>=0.20",
    "fastapi>=0.100",
]
all = [
    "ai-trust-validator[dev,server]",
]

[project.scripts]
aitrust = "ai_trust_validator.cli:main"

[project.urls]
Homepage = "https://github.com/rudra496/ai-code-trust-validator"
Documentation = "https://github.com/rudra496/ai-code-trust-validator#readme"
Repository = "https://github.com/rudra496/ai-code-trust-validator"
Issues = "https://github.com/rudra496/ai-code-trust-validator/issues"
Changelog = "https://github.com/rudra496/ai-code-trust-validator/releases"
Author = "https://rudra496.github.io/site"
LinkedIn = "https://www.linkedin.com/in/rudrasarker"

[project.entry-points."ai_trust_validator.plugins"]
security = "ai_trust_validator.analyzers.security:SecurityAnalyzer"
hallucination = "ai_trust_validator.analyzers.hallucination:HallucinationAnalyzer"
logic = "ai_trust_validator.analyzers.logic:LogicAnalyzer"
best_practices = "ai_trust_validator.analyzers.best_practices:BestPracticesAnalyzer"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_trust_validator*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=ai_trust_validator --cov-report=term-missing"
